# kube-rs

./: README.md
hello-world-rs-operator/: Cargo.toml  Dockerfile
hello-world-rs-operator/CustomResourceDefinitions/: Member.yaml
hello-world-rs-operator/Example/: member-william.yaml
hello-world-rs-operator/deployment/: operator.yaml  role-binding.yaml  role.yaml  service-account.yaml
hello-world-rs-operator/src/: main.rs
pod-list/: Cargo.toml  log4rs.yml
pod-list/src/: main.rs
