[package]
name = "hello-world-rs-operator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube = { version = "0.74", default-features = false, features = ["rustls-tls","runtime","derive","client"] }
kube-derive = "0.74.0"
k8s-openapi = { version = "0.15", default-features = false, features = ["v1_20"] }
schemars = "0.8"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
futures = "0.3.5"
tokio = { version = "1", features = ["full"] }