[package]
name = "pod-list-operator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
kube = "0.74.0"
log4rs = "1.0.0"
k8s-openapi = { version = "0.15.0", default-features = true,  features = ["v1_19"] }
tokio = { version = "1.10.1", features = ["full"] }
futures = "0.3.16"